[gd_scene load_steps=2 format=3 uid="uid://b7q2jntsdmyoj"]

[ext_resource type="Script" path="res://Scripts/UI/Settings.gd" id="1_settings"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2

[node name="HeaderContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Configuración"
theme_override_font_sizes/font_size = 24

[node name="CloseButton" type="Button" parent="Background/MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
text = "X"

[node name="TabContainer" type="TabContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Audio" type="Control" parent="Background/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_name = "Audio"

[node name="AudioContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 20

[node name="MusicVolumeContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Audio/AudioContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/TabContainer/Audio/AudioContainer/MusicVolumeContainer"]
layout_mode = 2
text = "Volumen de Música"

[node name="MusicVolumeSliderContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Audio/AudioContainer/MusicVolumeContainer"]
layout_mode = 2

[node name="MusicVolumeSlider" type="HSlider" parent="Background/MarginContainer/VBoxContainer/TabContainer/Audio/AudioContainer/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.01
value = 0.8

[node name="MusicVolumeLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/TabContainer/Audio/AudioContainer/MusicVolumeContainer"]
layout_mode = 2
custom_min_size = Vector2(60, 0)
text = "80%"

[node name="SFXVolumeContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Audio/AudioContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/TabContainer/Audio/AudioContainer/SFXVolumeContainer"]
layout_mode = 2
text = "Volumen de Efectos"

[node name="SFXVolumeSliderContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Audio/AudioContainer/SFXVolumeContainer"]
layout_mode = 2

[node name="SFXVolumeSlider" type="HSlider" parent="Background/MarginContainer/VBoxContainer/TabContainer/Audio/AudioContainer/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 1.0
step = 0.01
value = 0.8

[node name="SFXVolumeLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/TabContainer/Audio/AudioContainer/SFXVolumeContainer"]
layout_mode = 2
custom_min_size = Vector2(60, 0)
text = "80%"

[node name="Video" type="Control" parent="Background/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_name = "Video"

[node name="VideoContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 20

[node name="ResolutionContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Video/VideoContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/TabContainer/Video/VideoContainer/ResolutionContainer"]
layout_mode = 2
text = "Resolución de Pantalla"

[node name="ResolutionOption" type="OptionButton" parent="Background/MarginContainer/VBoxContainer/TabContainer/Video/VideoContainer/ResolutionContainer"]
layout_mode = 2

[node name="FullscreenContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Video/VideoContainer"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/TabContainer/Video/VideoContainer/FullscreenContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Pantalla Completa"

[node name="FullscreenCheck" type="CheckBox" parent="Background/MarginContainer/VBoxContainer/TabContainer/Video/VideoContainer/FullscreenContainer"]
layout_mode = 2

[node name="GraphicsContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Video/VideoContainer"]
layout_mode = 2

[node name="GraphicsLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/TabContainer/Video/VideoContainer/GraphicsContainer"]
layout_mode = 2
text = "Calidad Gráfica"

[node name="GraphicsOption" type="OptionButton" parent="Background/MarginContainer/VBoxContainer/TabContainer/Video/VideoContainer/GraphicsContainer"]
layout_mode = 2

[node name="VSyncContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Video/VideoContainer"]
layout_mode = 2

[node name="VSyncLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/TabContainer/Video/VideoContainer/VSyncContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "VSync"

[node name="VSyncCheck" type="CheckBox" parent="Background/MarginContainer/VBoxContainer/TabContainer/Video/VideoContainer/VSyncContainer"]
layout_mode = 2

[node name="Idioma" type="Control" parent="Background/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_name = "Idioma"

[node name="LanguageContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Idioma"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 20

[node name="LanguageLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/TabContainer/Idioma/LanguageContainer"]
layout_mode = 2
text = "Idioma"

[node name="LanguageOption" type="OptionButton" parent="Background/MarginContainer/VBoxContainer/TabContainer/Idioma/LanguageContainer"]
layout_mode = 2

[node name="Accesibilidad" type="Control" parent="Background/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_name = "Accesibilidad"

[node name="AccessibilityContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Accesibilidad"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 20

[node name="FontSizeContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Accesibilidad/AccessibilityContainer"]
layout_mode = 2

[node name="FontSizeLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/TabContainer/Accesibilidad/AccessibilityContainer/FontSizeContainer"]
layout_mode = 2
text = "Tamaño de Fuente"

[node name="FontSizeOption" type="OptionButton" parent="Background/MarginContainer/VBoxContainer/TabContainer/Accesibilidad/AccessibilityContainer/FontSizeContainer"]
layout_mode = 2

[node name="HighContrastContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Accesibilidad/AccessibilityContainer"]
layout_mode = 2

[node name="HighContrastLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/TabContainer/Accesibilidad/AccessibilityContainer/HighContrastContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Alto Contraste"

[node name="HighContrastCheck" type="CheckBox" parent="Background/MarginContainer/VBoxContainer/TabContainer/Accesibilidad/AccessibilityContainer/HighContrastContainer"]
layout_mode = 2

[node name="Controles" type="Control" parent="Background/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_name = "Controles"

[node name="ControlsContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Controles"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 20

[node name="ControlsTitle" type="Label" parent="Background/MarginContainer/VBoxContainer/TabContainer/Controles/ControlsContainer"]
layout_mode = 2
text = "Controles Actuales"

[node name="ControlsList" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/TabContainer/Controles/ControlsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResetControlsButton" type="Button" parent="Background/MarginContainer/VBoxContainer/TabContainer/Controles/ControlsContainer"]
layout_mode = 2
text = "Restaurar Controles por Defecto"

[node name="FooterContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="Background/MarginContainer/VBoxContainer/FooterContainer"]
layout_mode = 2
text = "Restaurar Predeterminados"

[node name="Spacer" type="Control" parent="Background/MarginContainer/VBoxContainer/FooterContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ApplyButton" type="Button" parent="Background/MarginContainer/VBoxContainer/FooterContainer"]
layout_mode = 2
text = "Aplicar Cambios"
